--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ disqus:
   # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
   shortname: himynameisrob
 
+# Analytics
+google_analytics: G-7S52Q7CHE7
+
 # Build settings
 theme: minima
 plugins:
