--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Hi My Name Is Rob
+tagline: A blog about my work inside Unity
 author: Rob Cary
 email: r0bc4ry@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -39,7 +40,7 @@ disqus:
 google_analytics: G-7S52Q7CHE7
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
 
